# ModernC

./: CMakeLists.txt  Cat.c  Cat.h  Dog.c  Dog.h  Girl.c  Girl.h  IAnimal.c  IAnimal.h  IEntity.h  IHuman.h  IRunable.h  UberGirl.c  UberGirl.h  main.c  oopcore.c  oopcore.h
cmake/: ModernCConfig.cmake
include/ModernC/: Core.h
src/ModernC/: Core.c
test/: IAnimal.h
